source/parser/GenesysParser.output
Não terminais inúteis na gramática

    illegal


Terminais sem uso na gramática

    fVAL
    fEVAL
    fLENG
    ILLEGAL
    fRESUTIL
    fENTATRANK
    fNUMGR
    fATRGR


Regras inúteis na gramática

  113 illegal: ILLEGAL


Estado 0 conflitos: 1 de deslocamento/redução
Estado 4 conflitos: 55 de deslocamento/redução
Estado 34 conflitos: 55 de deslocamento/redução
Estado 53 conflitos: 1 de deslocamento/redução
Estado 54 conflitos: 55 de deslocamento/redução
Estado 77 conflitos: 3 de deslocamento/redução
Estado 78 conflitos: 1 de deslocamento/redução
Estado 79 conflitos: 1 de deslocamento/redução
Estado 80 conflitos: 1 de deslocamento/redução
Estado 81 conflitos: 1 de deslocamento/redução
Estado 82 conflitos: 1 de deslocamento/redução
Estado 83 conflitos: 1 de deslocamento/redução
Estado 84 conflitos: 1 de deslocamento/redução
Estado 85 conflitos: 1 de deslocamento/redução
Estado 86 conflitos: 1 de deslocamento/redução
Estado 87 conflitos: 1 de deslocamento/redução
Estado 88 conflitos: 1 de deslocamento/redução
Estado 89 conflitos: 1 de deslocamento/redução
Estado 90 conflitos: 1 de deslocamento/redução
Estado 91 conflitos: 1 de deslocamento/redução
Estado 92 conflitos: 1 de deslocamento/redução
Estado 93 conflitos: 1 de deslocamento/redução
Estado 94 conflitos: 1 de deslocamento/redução
Estado 95 conflitos: 1 de deslocamento/redução
Estado 96 conflitos: 1 de deslocamento/redução
Estado 97 conflitos: 1 de deslocamento/redução
Estado 98 conflitos: 1 de deslocamento/redução
Estado 99 conflitos: 1 de deslocamento/redução
Estado 100 conflitos: 69 de deslocamento/redução
Estado 105 conflitos: 1 de deslocamento/redução
Estado 106 conflitos: 55 de deslocamento/redução
Estado 121 conflitos: 1 de deslocamento/redução
Estado 122 conflitos: 55 de deslocamento/redução
Estado 123 conflitos: 1 de deslocamento/redução
Estado 125 conflitos: 3 de deslocamento/redução
Estado 126 conflitos: 1 de deslocamento/redução
Estado 128 conflitos: 55 de deslocamento/redução
Estado 129 conflitos: 55 de deslocamento/redução
Estado 130 conflitos: 55 de deslocamento/redução
Estado 131 conflitos: 55 de deslocamento/redução
Estado 132 conflitos: 55 de deslocamento/redução
Estado 133 conflitos: 55 de deslocamento/redução
Estado 134 conflitos: 55 de deslocamento/redução
Estado 135 conflitos: 55 de deslocamento/redução
Estado 136 conflitos: 55 de deslocamento/redução
Estado 137 conflitos: 55 de deslocamento/redução
Estado 138 conflitos: 55 de deslocamento/redução
Estado 139 conflitos: 55 de deslocamento/redução
Estado 140 conflitos: 55 de deslocamento/redução
Estado 141 conflitos: 55 de deslocamento/redução
Estado 142 conflitos: 55 de deslocamento/redução
Estado 166 conflitos: 55 de deslocamento/redução
Estado 167 conflitos: 16 de deslocamento/redução
Estado 168 conflitos: 1 de deslocamento/redução
Estado 169 conflitos: 1 de deslocamento/redução
Estado 170 conflitos: 1 de deslocamento/redução
Estado 171 conflitos: 1 de deslocamento/redução
Estado 173 conflitos: 15 de deslocamento/redução
Estado 189 conflitos: 15 de deslocamento/redução
Estado 193 conflitos: 3 de deslocamento/redução
Estado 194 conflitos: 3 de deslocamento/redução
Estado 195 conflitos: 3 de deslocamento/redução
Estado 196 conflitos: 3 de deslocamento/redução
Estado 197 conflitos: 3 de deslocamento/redução
Estado 198 conflitos: 3 de deslocamento/redução
Estado 199 conflitos: 15 de deslocamento/redução
Estado 200 conflitos: 15 de deslocamento/redução
Estado 201 conflitos: 3 de deslocamento/redução
Estado 202 conflitos: 3 de deslocamento/redução
Estado 203 conflitos: 3 de deslocamento/redução
Estado 204 conflitos: 15 de deslocamento/redução
Estado 205 conflitos: 3 de deslocamento/redução
Estado 206 conflitos: 3 de deslocamento/redução
Estado 207 conflitos: 3 de deslocamento/redução
Estado 211 conflitos: 1 de deslocamento/redução
Estado 218 conflitos: 1 de deslocamento/redução
Estado 219 conflitos: 1 de deslocamento/redução
Estado 221 conflitos: 1 de deslocamento/redução
Estado 222 conflitos: 1 de deslocamento/redução
Estado 223 conflitos: 1 de deslocamento/redução
Estado 224 conflitos: 1 de deslocamento/redução
Estado 225 conflitos: 1 de deslocamento/redução
Estado 226 conflitos: 1 de deslocamento/redução
Estado 227 conflitos: 1 de deslocamento/redução
Estado 228 conflitos: 1 de deslocamento/redução
Estado 229 conflitos: 1 de deslocamento/redução
Estado 231 conflitos: 1 de deslocamento/redução
Estado 232 conflitos: 3 de deslocamento/redução, 74 de redução/redução
Estado 233 conflitos: 55 de deslocamento/redução
Estado 239 conflitos: 1 de deslocamento/redução
Estado 255 conflitos: 1 de deslocamento/redução
Estado 257 conflitos: 1 de deslocamento/redução
Estado 272 conflitos: 3 de deslocamento/redução
Estado 274 conflitos: 1 de deslocamento/redução
Estado 276 conflitos: 1 de deslocamento/redução
Estado 277 conflitos: 1 de deslocamento/redução
Estado 278 conflitos: 1 de deslocamento/redução
Estado 279 conflitos: 55 de deslocamento/redução
Estado 283 conflitos: 55 de deslocamento/redução
Estado 295 conflitos: 1 de deslocamento/redução
Estado 296 conflitos: 1 de deslocamento/redução
Estado 297 conflitos: 1 de deslocamento/redução
Estado 302 conflitos: 15 de deslocamento/redução
Estado 304 conflitos: 1 de deslocamento/redução
Estado 307 conflitos: 15 de deslocamento/redução
Estado 309 conflitos: 1 de deslocamento/redução
Estado 311 conflitos: 1 de deslocamento/redução
Estado 316 conflitos: 1 de deslocamento/redução
Estado 318 conflitos: 1 de deslocamento/redução
Estado 321 conflitos: 55 de deslocamento/redução
Estado 324 conflitos: 55 de deslocamento/redução
Estado 328 conflitos: 1 de deslocamento/redução
Estado 335 conflitos: 15 de deslocamento/redução
Estado 338 conflitos: 15 de deslocamento/redução
Estado 344 conflitos: 1 de deslocamento/redução
Estado 345 conflitos: 1 de deslocamento/redução
Estado 346 conflitos: 55 de deslocamento/redução
Estado 347 conflitos: 55 de deslocamento/redução
Estado 351 conflitos: 15 de deslocamento/redução
Estado 352 conflitos: 15 de deslocamento/redução
Estado 354 conflitos: 1 de deslocamento/redução
Estado 356 conflitos: 1 de deslocamento/redução
Estado 360 conflitos: 1 de deslocamento/redução
Estado 362 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: input "end of file"

    1 input: expression

    2 expression: number
    3           | function
    4           | command
    5           | assigment
    6           | arithmetic
    7           | logical
    8           | relacional
    9           | "(" expression ")"
   10           | attribute
   11           | variable
   12           | formula

   13 number: NUMD
   14       | NUMH

   15 arithmetic: expression "+" expression
   16           | expression "-" expression
   17           | expression "/" expression
   18           | expression "*" expression
   19           | expression "^" expression
   20           | "-" expression
   21           | mathMIN "(" expression "," expression ")"
   22           | mathMAX "(" expression "," expression ")"

   23 logical: expression oAND expression
   24        | expression oOR expression
   25        | expression oNAND expression
   26        | expression oXOR expression
   27        | oNOT expression

   28 relacional: expression "<" expression
   29           | expression ">" expression
   30           | expression oLE expression
   31           | expression oGE expression
   32           | expression oEQ expression
   33           | expression oNE expression

   34 command: commandIF
   35        | commandFOR

   36 commandIF: cIF expression expression cELSE expression
   37          | cIF expression expression

   38 commandFOR: cFOR variable "=" expression cTO expression cDO assigment
   39           | cFOR attribute "=" expression cTO expression cDO assigment

   40 function: mathFunction
   41         | trigonFunction
   42         | probFunction
   43         | kernelFunction
   44         | elementFunction
   45         | pluginFunction
   46         | userFunction

   47 kernelFunction: fTNOW
   48               | fTFIN
   49               | fMAXREP
   50               | fNUMREP
   51               | fIDENT
   52               | simulEntitiesWIP

   53 elementFunction: ε
   54                | fTAVG "(" CSTAT ")"
   55                | fCOUNT "(" COUNTER ")"

   56 trigonFunction: fSIN "(" expression ")"
   57               | fCOS "(" expression ")"

   58 mathFunction: fROUND "(" expression ")"
   59             | fFRAC "(" expression ")"
   60             | fTRUNC "(" expression ")"
   61             | fEXP "(" expression ")"
   62             | fSQRT "(" expression ")"
   63             | fLOG "(" expression ")"
   64             | fLN "(" expression ")"
   65             | fMOD "(" expression "," expression ")"

   66 probFunction: fRND1
   67             | fEXPO "(" expression ")"
   68             | fNORM "(" expression "," expression ")"
   69             | fUNIF "(" expression "," expression ")"
   70             | fWEIB "(" expression "," expression ")"
   71             | fLOGN "(" expression "," expression ")"
   72             | fGAMM "(" expression "," expression ")"
   73             | fERLA "(" expression "," expression ")"
   74             | fTRIA "(" expression "," expression "," expression ")"
   75             | fBETA "(" expression "," expression "," expression "," expression ")"
   76             | fDISC "(" listaparm ")"

   77 userFunction: "USER" "(" expression ")"

   78 listaparm: listaparm "," expression "," expression
   79          | expression "," expression

   80 attribute: ATRIB
   81          | ATRIB "[" expression "]"
   82          | ATRIB "[" expression "," expression "]"
   83          | ATRIB "[" expression "," expression "," expression "]"

   84 variable: VARI
   85         | VARI "[" expression "]"
   86         | VARI "[" expression "," expression "]"
   87         | VARI "[" expression "," expression "," expression "]"

   88 formula: FORM
   89        | FORM "[" expression "]"
   90        | FORM "[" expression "," expression "]"
   91        | FORM "[" expression "," expression "," expression "]"

   92 assigment: ATRIB "=" expression
   93          | ATRIB "[" expression "]" "=" expression
   94          | ATRIB "[" expression "," expression "]" "=" expression
   95          | ATRIB "[" expression "," expression "," expression "]" "=" expression
   96          | VARI "=" expression
   97          | VARI "[" expression "]" "=" expression
   98          | VARI "[" expression "," expression "]" "=" expression
   99          | VARI "[" expression "," expression "," expression "]" "=" expression

  100 pluginFunction: CTEZERO
  101               | fNQ "(" QUEUE ")"
  102               | fLASTINQ "(" QUEUE ")"
  103               | fFIRSTINQ "(" QUEUE ")"
  104               | fSAQUE "(" QUEUE "," ATRIB ")"
  105               | fAQUE "(" QUEUE "," NUMD "," ATRIB ")"
  106               | fMR "(" RESOURCE ")"
  107               | fNR "(" RESOURCE ")"
  108               | fRESSEIZES "(" RESOURCE ")"
  109               | fSTATE "(" RESOURCE ")"
  110               | fIRF "(" RESOURCE ")"
  111               | fSETSUM "(" SET ")"
  112               | fNUMSET "(" SET ")"


Terminais, com as regras onde eles aparecem

    "end of file" (0) 0
    error (256)
    NUMD <obj_t> (258) 13 105
    NUMH <obj_t> (259) 14
    CTEZERO <obj_t> (260) 100
    oLE <obj_t> (261) 30
    oGE <obj_t> (262) 31
    oEQ <obj_t> (263) 32
    oNE <obj_t> (264) 33
    oAND <obj_t> (265) 23
    oOR <obj_t> (266) 24
    oNAND <obj_t> (267) 25
    oXOR <obj_t> (268) 26
    oNOT <obj_t> (269) 27
    fSIN <obj_t> (270) 56
    fCOS <obj_t> (271) 57
    fROUND <obj_t> (272) 58
    fMOD <obj_t> (273) 65
    fTRUNC <obj_t> (274) 60
    fFRAC <obj_t> (275) 59
    fEXP <obj_t> (276) 61
    fSQRT <obj_t> (277) 62
    fLOG <obj_t> (278) 63
    fLN <obj_t> (279) 64
    mathMIN <obj_t> (280) 21
    mathMAX <obj_t> (281) 22
    fVAL <obj_t> (282)
    fEVAL <obj_t> (283)
    fLENG <obj_t> (284)
    fRND1 <obj_t> (285) 66
    fEXPO <obj_t> (286) 67
    fNORM <obj_t> (287) 68
    fUNIF <obj_t> (288) 69
    fWEIB <obj_t> (289) 70
    fLOGN <obj_t> (290) 71
    fGAMM <obj_t> (291) 72
    fERLA <obj_t> (292) 73
    fTRIA <obj_t> (293) 74
    fBETA <obj_t> (294) 75
    fDISC <obj_t> (295) 76
    fTNOW <obj_t> (296) 47
    fTFIN <obj_t> (297) 48
    fMAXREP <obj_t> (298) 49
    fNUMREP <obj_t> (299) 50
    fIDENT <obj_t> (300) 51
    simulEntitiesWIP <obj_t> (301) 52
    cIF <obj_t> (302) 36 37
    cELSE <obj_t> (303) 36
    cFOR <obj_t> (304) 38 39
    cTO <obj_t> (305) 38 39
    cDO <obj_t> (306) 38 39
    ATRIB <obj_t> (307) 80 81 82 83 92 93 94 95 104 105
    CSTAT <obj_t> (308) 54
    COUNTER <obj_t> (309) 55
    fTAVG <obj_t> (310) 54
    fCOUNT <obj_t> (311) 55
    ILLEGAL <obj_t> (312)
    RESOURCE <obj_t> (313) 106 107 108 109 110
    fNR <obj_t> (314) 107
    fMR <obj_t> (315) 106
    fIRF <obj_t> (316) 110
    fRESSEIZES <obj_t> (317) 108
    fSTATE <obj_t> (318) 109
    fSETSUM <obj_t> (319) 111
    fRESUTIL <obj_t> (320)
    QUEUE <obj_t> (321) 101 102 103 104 105
    fNQ <obj_t> (322) 101
    fFIRSTINQ <obj_t> (323) 103
    fLASTINQ <obj_t> (324) 102
    fSAQUE <obj_t> (325) 104
    fAQUE <obj_t> (326) 105
    fENTATRANK <obj_t> (327)
    SET <obj_t> (328) 111 112
    fNUMSET <obj_t> (329) 112
    VARI <obj_t> (330) 84 85 86 87 96 97 98 99
    FORM <obj_t> (331) 88 89 90 91
    fNUMGR <obj_t> (332)
    fATRGR <obj_t> (333)
    "(" (334) 9 21 22 54 55 56 57 58 59 60 61 62 63 64 65 67 68 69 70 71 72 73 74 75 76 77 101 102 103 104 105 106 107 108 109 110 111 112
    ")" (335) 9 21 22 54 55 56 57 58 59 60 61 62 63 64 65 67 68 69 70 71 72 73 74 75 76 77 101 102 103 104 105 106 107 108 109 110 111 112
    "[" (336) 81 82 83 85 86 87 89 90 91 93 94 95 97 98 99
    "]" (337) 81 82 83 85 86 87 89 90 91 93 94 95 97 98 99
    "+" (338) 15
    "-" (339) 16 20
    "*" (340) 18
    "^" (341) 19
    "/" (342) 17
    "<" (343) 28
    ">" (344) 29
    "=" (345) 38 39 92 93 94 95 96 97 98 99
    "," (346) 21 22 65 68 69 70 71 72 73 74 75 78 79 82 83 86 87 90 91 94 95 98 99 104 105
    NEG (347)
    "USER" (348) 77


Não terminais com as regras onde eles aparecem

    $accept (94)
        à esquerda: 0
    input <obj_t> (95)
        à esquerda: 1
        à direita: 0
    expression <obj_t> (96)
        à esquerda: 2 3 4 5 6 7 8 9 10 11 12
        à direita: 1 9 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 36 37 38 39 56 57 58 59 60 61 62 63 64 65 67 68 69 70 71 72 73 74 75 77 78 79 81 82 83 85 86 87 89 90 91 92 93 94 95 96 97 98 99
    number <obj_t> (97)
        à esquerda: 13 14
        à direita: 2
    arithmetic <obj_t> (98)
        à esquerda: 15 16 17 18 19 20 21 22
        à direita: 6
    logical <obj_t> (99)
        à esquerda: 23 24 25 26 27
        à direita: 7
    relacional <obj_t> (100)
        à esquerda: 28 29 30 31 32 33
        à direita: 8
    command <obj_t> (101)
        à esquerda: 34 35
        à direita: 4
    commandIF <obj_t> (102)
        à esquerda: 36 37
        à direita: 34
    commandFOR <obj_t> (103)
        à esquerda: 38 39
        à direita: 35
    function <obj_t> (104)
        à esquerda: 40 41 42 43 44 45 46
        à direita: 3
    kernelFunction <obj_t> (105)
        à esquerda: 47 48 49 50 51 52
        à direita: 43
    elementFunction <obj_t> (106)
        à esquerda: 53 54 55
        à direita: 44
    trigonFunction <obj_t> (107)
        à esquerda: 56 57
        à direita: 41
    mathFunction <obj_t> (108)
        à esquerda: 58 59 60 61 62 63 64 65
        à direita: 40
    probFunction <obj_t> (109)
        à esquerda: 66 67 68 69 70 71 72 73 74 75 76
        à direita: 42
    userFunction <obj_t> (110)
        à esquerda: 77
        à direita: 46
    listaparm <obj_t> (111)
        à esquerda: 78 79
        à direita: 76 78
    attribute <obj_t> (112)
        à esquerda: 80 81 82 83
        à direita: 10 39
    variable <obj_t> (113)
        à esquerda: 84 85 86 87
        à direita: 11 38
    formula <obj_t> (114)
        à esquerda: 88 89 90 91
        à direita: 12
    assigment <obj_t> (115)
        à esquerda: 92 93 94 95 96 97 98 99
        à direita: 5 38 39
    pluginFunction <obj_t> (116)
        à esquerda: 100 101 102 103 104 105 106 107 108 109 110 111 112
        à direita: 45


Estado 0

    0 $accept: • input "end of file"

    NUMD              deslocar, e ir ao estado 1
    NUMH              deslocar, e ir ao estado 2
    CTEZERO           deslocar, e ir ao estado 3
    oNOT              deslocar, e ir ao estado 4
    fSIN              deslocar, e ir ao estado 5
    fCOS              deslocar, e ir ao estado 6
    fROUND            deslocar, e ir ao estado 7
    fMOD              deslocar, e ir ao estado 8
    fTRUNC            deslocar, e ir ao estado 9
    fFRAC             deslocar, e ir ao estado 10
    fEXP              deslocar, e ir ao estado 11
    fSQRT             deslocar, e ir ao estado 12
    fLOG              deslocar, e ir ao estado 13
    fLN               deslocar, e ir ao estado 14
    mathMIN           deslocar, e ir ao estado 15
    mathMAX           deslocar, e ir ao estado 16
    fRND1             deslocar, e ir ao estado 17
    fEXPO             deslocar, e ir ao estado 18
    fNORM             deslocar, e ir ao estado 19
    fUNIF             deslocar, e ir ao estado 20
    fWEIB             deslocar, e ir ao estado 21
    fLOGN             deslocar, e ir ao estado 22
    fGAMM             deslocar, e ir ao estado 23
    fERLA             deslocar, e ir ao estado 24
    fTRIA             deslocar, e ir ao estado 25
    fBETA             deslocar, e ir ao estado 26
    fDISC             deslocar, e ir ao estado 27
    fTNOW             deslocar, e ir ao estado 28
    fTFIN             deslocar, e ir ao estado 29
    fMAXREP           deslocar, e ir ao estado 30
    fNUMREP           deslocar, e ir ao estado 31
    fIDENT            deslocar, e ir ao estado 32
    simulEntitiesWIP  deslocar, e ir ao estado 33
    cIF               deslocar, e ir ao estado 34
    cFOR              deslocar, e ir ao estado 35
    ATRIB             deslocar, e ir ao estado 36
    fTAVG             deslocar, e ir ao estado 37
    fCOUNT            deslocar, e ir ao estado 38
    fNR               deslocar, e ir ao estado 39
    fMR               deslocar, e ir ao estado 40
    fIRF              deslocar, e ir ao estado 41
    fRESSEIZES        deslocar, e ir ao estado 42
    fSTATE            deslocar, e ir ao estado 43
    fSETSUM           deslocar, e ir ao estado 44
    fNQ               deslocar, e ir ao estado 45
    fFIRSTINQ         deslocar, e ir ao estado 46
    fLASTINQ          deslocar, e ir ao estado 47
    fSAQUE            deslocar, e ir ao estado 48
    fAQUE             deslocar, e ir ao estado 49
    fNUMSET           deslocar, e ir ao estado 50
    VARI              deslocar, e ir ao estado 51
    FORM              deslocar, e ir ao estado 52
    "("               deslocar, e ir ao estado 53
    "-"               deslocar, e ir ao estado 54
    "USER"            deslocar, e ir ao estado 55

    "-"      [reduzir usando a regra 53 (elementFunction)]
    $padrão  reduzir usando a regra 53 (elementFunction)

    input            ir ao estado 56
    expression       ir ao estado 57
    number           ir ao estado 58
    arithmetic       ir ao estado 59
    logical          ir ao estado 60
    relacional       ir ao estado 61
    command          ir ao estado 62
    commandIF        ir ao estado 63
    commandFOR       ir ao estado 64
    function         ir ao estado 65
    kernelFunction   ir ao estado 66
    elementFunction  ir ao estado 67
    trigonFunction   ir ao estado 68
    mathFunction     ir ao estado 69
    probFunction     ir ao estado 70
    userFunction     ir ao estado 71
    attribute        ir ao estado 72
    variable         ir ao estado 73
    formula          ir ao estado 74
    assigment        ir ao estado 75
    pluginFunction   ir ao estado 76


Estado 1

   13 number: NUMD •

    $padrão  reduzir usando a regra 13 (number)


Estado 2

   14 number: NUMH •

    $padrão  reduzir usando a regra 14 (number)


Estado 3

  100 pluginFunction: CTEZERO •

    $padrão  reduzir usando a regra 100 (pluginFunction)


Estado 4

   27 logical: oNOT • expression

    NUMD              deslocar, e ir ao estado 1
    NUMH              deslocar, e ir ao estado 2
    CTEZERO           deslocar, e ir ao estado 3
    oNOT              deslocar, e ir ao estado 4
    fSIN              deslocar, e ir ao estado 5
    fCOS              deslocar, e ir ao estado 6
    fROUND            deslocar, e ir ao estado 7
    fMOD              deslocar, e ir ao estado 8
    fTRUNC            deslocar, e ir ao estado 9
    fFRAC             deslocar, e ir ao estado 10
    fEXP              deslocar, e ir ao estado 11
    fSQRT             deslocar, e ir ao estado 12
    fLOG              deslocar, e ir ao estado 13
    fLN               deslocar, e ir ao estado 14
    mathMIN           deslocar, e ir ao estado 15
    mathMAX           deslocar, e ir ao estado 16
    fRND1             deslocar, e ir ao estado 17
    fEXPO             deslocar, e ir ao estado 18
    fNORM             deslocar, e ir ao estado 19
    fUNIF             deslocar, e ir ao estado 20
    fWEIB             deslocar, e ir ao estado 21
    fLOGN             deslocar, e ir ao estado 22
    fGAMM             deslocar, e ir ao estado 23
    fERLA             deslocar, e ir ao estado 24
    fTRIA             deslocar, e ir ao estado 25
    fBETA             deslocar, e ir ao estado 26
    fDISC             deslocar, e ir ao estado 27
    fTNOW             deslocar, e ir ao estado 28
    fTFIN             deslocar, e ir ao estado 29
    fMAXREP           deslocar, e ir ao estado 30
    fNUMREP           deslocar, e ir ao estado 31
    fIDENT            deslocar, e ir ao estado 32
    simulEntitiesWIP  deslocar, e ir ao estado 33
    cIF               deslocar, e ir ao estado 34
    cFOR              deslocar, e ir ao estado 35
    ATRIB             deslocar, e ir ao estado 36
    fTAVG             deslocar, e ir ao estado 37
    fCOUNT            deslocar, e ir ao estado 38
    fNR               deslocar, e ir ao estado 39
    fMR               deslocar, e ir ao estado 40
    fIRF              deslocar, e ir ao estado 41
    fRESSEIZES        deslocar, e ir ao estado 42
    fSTATE            deslocar, e ir ao estado 43
    fSETSUM           deslocar, e ir ao estado 44
    fNQ               deslocar, e ir ao estado 45
    fFIRSTINQ         deslocar, e ir ao estado 46
    fLASTINQ          deslocar, e ir ao estado 47
    fSAQUE            deslocar, e ir ao estado 48
    fAQUE             deslocar, e ir ao estado 49
    fNUMSET           deslocar, e ir ao estado 50
    VARI              deslocar, e ir ao estado 51
    FORM              deslocar, e ir ao estado 52
    "("               deslocar, e ir ao estado 53
    "-"               deslocar, e ir ao estado 54
    "USER"            deslocar, e ir ao estado 55

    NUMD              [reduzir usando a regra 53 (elementFunction)]
    NUMH              [reduzir usando a regra 53 (elementFunction)]
    CTEZERO           [reduzir usando a regra 53 (elementFunction)]
    oNOT              [reduzir usando a regra 53 (elementFunction)]
    fSIN              [reduzir usando a regra 53 (elementFunction)]
    fCOS              [reduzir usando a regra 53 (elementFunction)]
    fROUND            [reduzir usando a regra 53 (elementFunction)]
    fMOD              [reduzir usando a regra 53 (elementFunction)]
    fTRUNC            [reduzir usando a regra 53 (elementFunction)]
    fFRAC             [reduzir usando a regra 53 (elementFunction)]
    fEXP              [reduzir usando a regra 53 (elementFunction)]
    fSQRT             [reduzir usando a regra 53 (elementFunction)]
    fLOG              [reduzir usando a regra 53 (elementFunction)]
    fLN               [reduzir usando a regra 53 (elementFunction)]
    mathMIN           [reduzir usando a regra 53 (elementFunction)]
    mathMAX           [reduzir usando a regra 53 (elementFunction)]
    fRND1             [reduzir usando a regra 53 (elementFunction)]
    fEXPO             [reduzir usando a regra 53 (elementFunction)]
    fNORM             [reduzir usando a regra 53 (elementFunction)]
    fUNIF             [reduzir usando a regra 53 (elementFunction)]
    fWEIB             [reduzir usando a regra 53 (elementFunction)]
    fLOGN             [reduzir usando a regra 53 (elementFunction)]
    fGAMM             [reduzir usando a regra 53 (elementFunction)]
    fERLA             [reduzir usando a regra 53 (elementFunction)]
    fTRIA             [reduzir usando a regra 53 (elementFunction)]
    fBETA             [reduzir usando a regra 53 (elementFunction)]
    fDISC             [reduzir usando a regra 53 (elementFunction)]
    fTNOW             [reduzir usando a regra 53 (elementFunction)]
    fTFIN             [reduzir usando a regra 53 (elementFunction)]
    fMAXREP           [reduzir usando a regra 53 (elementFunction)]
    fNUMREP           [reduzir usando a regra 53 (elementFunction)]
    fIDENT            [reduzir usando a regra 53 (elementFunction)]
    simulEntitiesWIP  [reduzir usando a regra 53 (elementFunction)]
    cIF               [reduzir usando a regra 53 (elementFunction)]
    cFOR              [reduzir usando a regra 53 (elementFunction)]
    ATRIB             [reduzir usando a regra 53 (elementFunction)]
    fTAVG             [reduzir usando a regra 53 (elementFunction)]
    fCOUNT            [reduzir usando a regra 53 (elementFunction)]
    fNR               [reduzir usando a regra 53 (elementFunction)]
    fMR               [reduzir usando a regra 53 (elementFunction)]
    fIRF              [reduzir usando a regra 53 (elementFunction)]
    fRESSEIZES        [reduzir usando a regra 53 (elementFunction)]
    fSTATE            [reduzir usando a regra 53 (elementFunction)]
    fSETSUM           [reduzir usando a regra 53 (elementFunction)]
    fNQ               [reduzir usando a regra 53 (elementFunction)]
    fFIRSTINQ         [reduzir usando a regra 53 (elementFunction)]
    fLASTINQ          [reduzir usando a regra 53 (elementFunction)]
    fSAQUE            [reduzir usando a regra 53 (elementFunction)]
    fAQUE             [reduzir usando a regra 53 (elementFunction)]
    fNUMSET           [reduzir usando a regra 53 (elementFunction)]
    VARI              [reduzir usando a regra 53 (elementFunction)]
    FORM              [reduzir usando a regra 53 (elementFunction)]
    "("               [reduzir usando a regra 53 (elementFunction)]
    "-"               [reduzir usando a regra 53 (elementFunction)]
    "USER"            [reduzir usando a regra 53 (elementFunction)]
    $padrão           reduzir usando a regra 53 (elementFunction)

    expression       ir ao estado 77
    number           ir ao estado 58
    arithmetic       ir ao estado 59
    logical          ir ao estado 60
    relacional       ir ao estado 61
    command          ir ao estado 62
    commandIF        ir ao estado 63
    commandFOR       ir ao estado 64
    function         ir ao estado 65
    kernelFunction   ir ao estado 66
    elementFunction  ir ao estado 67
    trigonFunction   ir ao estado 68
    mathFunction     ir ao estado 69
    probFunction     ir ao estado 70
    userFunction     ir ao estado 71
    attribute        ir ao estado 72
    variable         ir ao estado 73
    formula          ir ao estado 74
    assigment        ir ao estado 75
    pluginFunction   ir ao estado 76


Estado 5

   56 trigonFunction: fSIN • "(" expression ")"

    "("  deslocar, e ir ao estado 78


Estado 6

   57 trigonFunction: fCOS • "(" expression ")"

    "("  deslocar, e ir ao estado 79


Estado 7

   58 mathFunction: fROUND • "(" expression ")"

    "("  deslocar, e ir ao estado 80


Estado 8

   65 mathFunction: fMOD • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 81


Estado 9

   60 mathFunction: fTRUNC • "(" expression ")"

    "("  deslocar, e ir ao estado 82


Estado 10

   59 mathFunction: fFRAC • "(" expression ")"

    "("  deslocar, e ir ao estado 83


Estado 11

   61 mathFunction: fEXP • "(" expression ")"

    "("  deslocar, e ir ao estado 84


Estado 12

   62 mathFunction: fSQRT • "(" expression ")"

    "("  deslocar, e ir ao estado 85


Estado 13

   63 mathFunction: fLOG • "(" expression ")"

    "("  deslocar, e ir ao estado 86


Estado 14

   64 mathFunction: fLN • "(" expression ")"

    "("  deslocar, e ir ao estado 87


Estado 15

   21 arithmetic: mathMIN • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 88


Estado 16

   22 arithmetic: mathMAX • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 89


Estado 17

   66 probFunction: fRND1 •

    $padrão  reduzir usando a regra 66 (probFunction)


Estado 18

   67 probFunction: fEXPO • "(" expression ")"

    "("  deslocar, e ir ao estado 90


Estado 19

   68 probFunction: fNORM • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 91


Estado 20

   69 probFunction: fUNIF • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 92


Estado 21

   70 probFunction: fWEIB • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 93


Estado 22

   71 probFunction: fLOGN • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 94


Estado 23

   72 probFunction: fGAMM • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 95


Estado 24

   73 probFunction: fERLA • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 96


Estado 25

   74 probFunction: fTRIA • "(" expression "," expression "," expression ")"

    "("  deslocar, e ir ao estado 97


Estado 26

   75 probFunction: fBETA • "(" expression "," expression "," expression "," expression ")"

    "("  deslocar, e ir ao estado 98


Estado 27

   76 probFunction: fDISC • "(" listaparm ")"

    "("  deslocar, e ir ao estado 99


Estado 28

   47 kernelFunction: fTNOW •

    $padrão  reduzir usando a regra 47 (kernelFunction)


Estado 29

   48 kernelFunction: fTFIN •

    $padrão  reduzir usando a regra 48 (kernelFunction)


Estado 30

   49 kernelFunction: fMAXREP •

    $padrão  reduzir usando a regra 49 (kernelFunction)


Estado 31

   50 kernelFunction: fNUMREP •

    $padrão  reduzir usando a regra 50 (kernelFunction)


Estado 32

   51 kernelFunction: fIDENT •

    $padrão  reduzir usando a regra 51 (kernelFunction)


Estado 33

   52 kernelFunction: simulEntitiesWIP •

    $padrão  reduzir usando a regra 52 (kernelFunction)


Estado 34

   36 commandIF: cIF • expression expression cELSE expression
   37          | cIF • expression expression
